@@ -1,5 +1,8 @@
 ChangeLog for the Astro project.
 
+20200113:
+	* add LuminanceFunction infrastructure to the adapter framework
+
 20200105:
 	* add missing psf.cpp tool
 	* fix missing function in FourierImage.cpp
